@@ -1,5 +1,6 @@
 package com.marensovich.eljur.service;
 
+import com.marensovich.eljur.data.ScoreWorkType;
 import com.marensovich.eljur.model.Homework;
 import com.marensovich.eljur.model.Shedule;
 import com.marensovich.eljur.model.Students;
@@ -10,6 +11,7 @@ import org.springframework.stereotype.Service;
 
 import java.time.DayOfWeek;
 import java.time.LocalDate;
+import java.time.LocalDateTime;
 import java.time.format.DateTimeFormatter;
 import java.util.HashMap;
 import java.util.List;
@@ -39,6 +41,8 @@ public class SheduleService {
     private ScoreService scoreService;
     @Autowired
     private FileService fileService;
+    @Autowired
+    private FilesRepository filesRepository;
 
     /**
      * Get lessons tree map.
@@ -51,15 +55,15 @@ public class SheduleService {
     public TreeMap<String, TreeMap<Integer, Map<String, Object>>> getLessons(User user,
                            String startDate,
                            String endDate){
-        Students student = studentsRepository.getById(user.getId());
+        Students student = studentsRepository.getStudentsById(user.getId());
 
         LocalDate now = LocalDate.now();
         DateTimeFormatter formatter = DateTimeFormatter.ofPattern("dd.MM.yyyy");
 
-        LocalDate startOfWeek = startDate != null ? LocalDate.parse(startDate, formatter) : now.with(DayOfWeek.MONDAY);
-        LocalDate endOfWeek = endDate != null ? LocalDate.parse(endDate, formatter) : now.with(DayOfWeek.SUNDAY);
+        LocalDateTime startOfWeek = LocalDateTime.from(startDate != null ? LocalDate.parse(startDate, formatter) : now.with(DayOfWeek.MONDAY));
+        LocalDateTime endOfWeek = LocalDateTime.from(endDate != null ? LocalDate.parse(endDate, formatter) : now.with(DayOfWeek.SUNDAY));
 
-        List<Shedule> lessons = lessonRepository.getLessonsByDateBetweenAndGroupAndSubgroup(startOfWeek, endOfWeek, student.getGroup(), student.getSubgroup());
+        List<Shedule> lessons = lessonRepository.getLessonsByDateBetweenAndGroupAndSubgroupId(startOfWeek, endOfWeek, student.getGroup(), student.getSubgroup());
         TreeMap<String, TreeMap<Integer, Map<String, Object>>> groupedLessons = lessons.stream()
                 .collect(Collectors.groupingBy(
                         lesson -> lesson.getDate().format(DateTimeFormatter.ofPattern("dd.MM.yyyy")),
@@ -68,42 +72,56 @@ public class SheduleService {
                                 Shedule::getRank,
                                 lesson -> {
                                     Map<String, Object> lessonDetails = new HashMap<>();
-                                    lessonDetails.put("subject", subjectRepository.getSubjectNameById(lesson.getSubject()));
-                                    lessonDetails.put("room", lesson.getRoom());
-                                    lessonDetails.put("teacher", userRepository.getFullnameByUser_id(lesson.getTeacher()));
-                                    homeworkRepository.findHomeworkByLessonID(lesson.getId())
-                                            .map(Homework::getHomework)
-                                            .ifPresent(homework -> lessonDetails.put("homework", homework));
-                                    lessonDetails.put("time", lesson.getTime());
-                                    homeworkRepository.getHomeworkFilesByLessonID(lesson.getId())
-                                            .stream()
-                                            .map(fileService::getFileNameWithID)
-                                            .filter(homeworkFiles -> !homeworkFiles.isEmpty())
-                                            .findFirst()
-                                            .ifPresent(homeworkFiles -> lessonDetails.put("homework_files", homeworkFiles));
 
-                                    List<String> score = scoreRepository.getScoreTypeByLessonIDAndUserId(lesson.getId(), user.getId());
-                                    List<Integer> scores = score.stream()
+                                    // Основная информация о уроке
+                                    lessonDetails.put("subject", subjectRepository.getSubjectNameById(lesson.getSubject().getId()));
+                                    lessonDetails.put("room", lesson.getRoom());
+                                    lessonDetails.put("teacher", userRepository.getUserById(lesson.getTeacher().getId()).getFullname());
+                                    lessonDetails.put("time", lesson.getTime());
+
+                                    // Домашнее задание
+                                    homeworkRepository.findHomeworkByLessonId(lesson.getId())
+                                            .stream()
+                                            .map(Homework::getText)
+                                            .findFirst()
+                                            .ifPresent(homework -> lessonDetails.put("homework", homework));
+
+                                    // Файлы домашнего задания
+                                    homeworkRepository.findHomeworkByLessonId(lesson.getId())
+                                            .stream()
+                                            .flatMap(hw -> hw.getFiles().stream())
+                                            .map(file -> filesRepository.getFilenamesByFilename(file.getFilename())) // тут уже конкретный файл
+                                            .collect(Collectors.collectingAndThen(Collectors.toList(), list -> {
+                                                if (!list.isEmpty()) {
+                                                    lessonDetails.put("homework_files", list);
+                                                }
+                                                return list;
+                                            }));
+
+
+                                    // Оценки
+                                    List<String> scoreTypes = scoreRepository.getScoresByUser_IdAndSubject_Id(user.getId(), lesson.getId());
+                                    List<Integer> scores = scoreTypes.stream()
                                             .map(scoreService::convertScoreTypeToInt)
-                                            .toList();
+                                            .collect(Collectors.toList());
                                     lessonDetails.put("scores", scores);
 
-                                    List<String> scoreWork = scoreRepository.getScoreWorkTypeByLessonIDAndUserId(lesson.getId(), user.getId());
-                                    List<String> scoreWorkTexts = scoreWork.stream()
-                                            .map(scoreService::convertScoreWorkTypeToString)
-                                            .toList();
+                                    // Типы работ
+                                    List<String> scoreWorkTexts = scoreRepository.getScoresByUser_IdAndSubject_Id(user.getId(), lesson.getId())
+                                            .stream()
+                                            .map(scoreService::convertScoreWorkTypeToString) // и тут тоже строку
+                                            .collect(Collectors.toList());
                                     lessonDetails.put("scoreWorkType", scoreWorkTexts);
 
-                                    List<String> scoreText = scoreRepository.getScoreTextByLessonIDAndUserId(lesson.getId(), user.getId());
-                                    lessonDetails.put("score_texts", scoreText);
+                                    // Тексты оценок
+                                    List<String> scoreTexts = scoreRepository.getAllByLessonIdAndUser_Id(lesson.getId(), user.getId());
+                                    lessonDetails.put("score_texts", scoreTexts);
 
                                     return lessonDetails;
                                 },
-                                (existing, replacement) -> existing,
-                                () -> new TreeMap<>()
-                        )
-                ));
-
+                                (existing, replacement) -> existing, // resolver для дубликатов ключей
+                                TreeMap::new // supplier для TreeMap
+                        )));
         return groupedLessons;
     }
 }
